--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+
+.maximoTamanoCreacion {
+  width: 300px;
+  height: auto;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -36,3 +42,5 @@
     transform: rotate(360deg);
   }
 }
+
+
