--- a/src/assets/css/portada.css
+++ b/src/assets/css/portada.css
@@ -1,3 +1,16 @@
+
+
+
+
+
+
+
+
+.mini-footer {
+  background:#192027;
+  padding:25px 0
+ }
+
 .bg-success {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-success-rgb), var(--bs-bg-opacity)) !important;
@@ -93,7 +106,7 @@
 }
 
 .pimg2 {
-  background-image: url("https://thumbs.dreamstime.com/b/medical-banner-copy-space-medical-banner-copy-space-stethoscope-blue-notebook-alarm-clock-blank-page-white-211231916.jpg");
+  background-image: url("https://images.pexels.com/photos/415779/pexels-photo-415779.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
   min-height: 300px;
 }
 
@@ -149,7 +162,10 @@ body {
   padding: 2rem 1.5rem;
   margin: 0 auto;
   color: #241623;
-  background: #eef2f4;
+  background: #333;
+  font-family: 'Roboto Condensed', sans-serif;
+  text-transform: uppercase;
+
 }
 
 h1 {
@@ -194,7 +210,7 @@ a {
   aspect-ratio: 1/1;
   position: relative;
   padding: 1.5rem;
-  color: #ffffff;
+
   backface-visibility: hidden;
   text-decoration: none;
   overflow: hidden;
@@ -214,22 +230,8 @@ a {
 .profile::before {
   background: linear-gradient(
     to top,
-    hsl(0 0% 0% / 0.79) 0%,
-    hsl(0 0% 0% / 0.787) 7.8%,
-    hsl(0 0% 0% / 0.779) 14.4%,
-    hsl(0 0% 0% / 0.765) 20.2%,
-    hsl(0 0% 0% / 0.744) 25.3%,
-    hsl(0 0% 0% / 0.717) 29.9%,
-    hsl(0 0% 0% / 0.683) 34.3%,
-    hsl(0 0% 0% / 0.641) 38.7%,
-    hsl(0 0% 0% / 0.592) 43.3%,
-    hsl(0 0% 0% / 0.534) 48.4%,
-    hsl(0 0% 0% / 0.468) 54.1%,
-    hsl(0 0% 0% / 0.393) 60.6%,
-    hsl(0 0% 0% / 0.31) 68.3%,
-    hsl(0 0% 0% / 0.216) 77.3%,
-    hsl(0 0% 0% / 0.113) 87.7%,
-    hsl(0 0% 0% / 0) 100%
+    rgba(255, 255, 255, 0.79) 0%,
+
   );
   transition: 300ms opacity linear;
 }
@@ -237,10 +239,10 @@ a {
 .profile::after {
   background: linear-gradient(
     45deg,
-    hsl(5 97% 63% / 0.7) 0,
+    rgba(22, 56, 167, 0.7) 0,
     hsl(5 97% 63% / 0) 100%
   );
-  opacity: 0;
+  opacity: 21;
   transition: 300ms opacity linear;
 }
 
@@ -257,8 +259,8 @@ a {
   margin: 0;
   z-index: -1;
   object-fit: cover;
-  filter: grayscale(1);
-  transition: filter 200ms ease, transform 250ms linear;
+  
+  
 }
 
 .profile h2,
