--- a/src/assets/css/portada.css
+++ b/src/assets/css/portada.css
@@ -8,7 +8,8 @@
 
 .mini-footer {
   background:#192027;
-  padding:25px 0
+  padding:25px 0;
+
  }
 
 .bg-success {
@@ -240,7 +241,7 @@ a {
   background: linear-gradient(
     45deg,
     rgba(22, 56, 167, 0.7) 0,
-    hsl(5 97% 63% / 0) 100%
+    rgba(22, 56, 167, 0.7) 100%
   );
   opacity: 21;
   transition: 300ms opacity linear;
@@ -324,12 +325,6 @@ a {
 
 @import url('https://fonts.googleapis.com/css?family=Abel|Aguafina+Script|Artifika|Athiti|Condiment|Dosis|Droid+Serif|Farsan|Gurajada|Josefin+Sans|Lato|Lora|Merriweather|Noto+Serif|Open+Sans+Condensed:300|Playfair+Display|Rasa|Sahitya|Share+Tech|Text+Me+One|Titillium+Web');
 
-body {
-background: #DFC2F2;
-	background-image: linear-gradient( 135deg, #f2ecf7 10%, #f5f5f7 100%);
-	background-attachment: fixed;	
-	background-size: cover;
-	}
 
 #container{
 	box-shadow: 0 15px 30px 1px rgba(128, 128, 128, 0.31);
